Regression(99212): table rows get incorrect height after changing some cells' height https://bugs.webkit.org/show_bug.cgi?id=74303

Reviewed by Darin Adler.

Source/WebCore:

Tests: fast/table/resize-table-binding-cell.html
       fast/table/resize-table-cell.html
       fast/table/resize-table-row.html

r99212 wrongly implemented the row's logicalHeight recalculation.
The original code would use recalcCells which would properly recalculate a
row logicalHeight by iterating over the table's cells but throwing out the
existing result.

Our approach is just to recompute our row's logicalHeight and leave the
rest of the section untouched.

* rendering/RenderTableSection.cpp:
(WebCore::updateLogicalHeightForCell):
Added this new helper function to update the RowStruct logicalHeight during
|addCell| and |rowLogicalHeightChanged|.

(WebCore::RenderTableSection::addCell):
Replaced the old code with a call to updateLogicalHeightForCell.
(WebCore::RenderTableSection::rowLogicalHeightChanged):
Added a call to updateLogicalHeightForCell for each cells.

LayoutTests:

Added some tests that resize a cell or a row and check that we properly recompute the height.

* fast/table/resize-table-binding-cell-expected.txt: Added.
* fast/table/resize-table-binding-cell.html: Added.
* fast/table/resize-table-cell-expected.txt: Added.
* fast/table/resize-table-cell.html: Added.
* fast/table/resize-table-row-expected.txt: Added.
* fast/table/resize-table-row.html: Added.


Canonical link: https://commits.webkit.org/91686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103327 268f45cc-cd09-0410-ab3c-d52691b4dbfc